making tool more shippable

--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,15 @@
         "psr-4": {"Taxman\\": "src/"}
     },
     "require": {
-        "symfony/console": "^3.1",
-    "symfony/dependency-injection": "^3.1",
-    "symfony/config": "^3.1"
-    }
+      "symfony/console": "^3.1",
+      "symfony/dependency-injection": "^3.1",
+      "symfony/config": "^3.1",
+      "symfony/cache": "^3.1"
+    },
+    "authors": [
+      { "name": "Josh Waihi", "email": "joshwaihi@gmail.com" },
+    ],
+    "bin": [
+      "taxman",
+    ]
 }
