Fix commas in composer.json, and also commit the lock file.

--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,12 @@
     "require": {
       "symfony/console": "^3.1",
       "symfony/dependency-injection": "^3.1",
-      "symfony/config": "^3.1",
+      "symfony/config": "^3.1"
     },
     "authors": [
-      { "name": "Josh Waihi", "email": "joshwaihi@gmail.com" },
+      { "name": "Josh Waihi", "email": "joshwaihi@gmail.com" }
     ],
     "bin": [
-      "taxman",
+      "taxman"
     ]
 }
